--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@ body {
 
 <div class="navbar">
   <div class="navbar-logo">
-    <a href="homepage.html">
+    <a href="index.html">
       <img src="logo/logo.svg" alt="Logo" width="40" height="40">
     </a>
   </div>
