--- a/homepage.html
+++ b/homepage.html
@@ -95,7 +95,7 @@
 <div class="navbar">
 
   <div class="navbar-logo">
-    <a href="homepage.html">
+    <a href="index.html">
       <img src="logo/logo.svg" alt="Logo" width="40" height="40">
     </a>
   </div>
