--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@ a {
 
 <div class="navbar">
   <div class="navbar-logo">
-    <a href="homepage.html">
+    <a href="index.html">
       <img src="logo/logo.svg" alt="Logo" width="40" height="40">
     </a>
   </div>
