--- a/stars/travel.html
+++ b/stars/travel.html
@@ -2170,7 +2170,7 @@ transform: translate(80.0240979233vw, 0.0066192762vh);
 <div class="navbar">
 
   <div class="navbar-logo">
-    <a href="../homepage.html">
+    <a href="../index.html">
       <img src="../logo/logo.svg" alt="Logo" width="40" height="40">
     </a>
   </div>
