--- a/about.html
+++ b/about.html
@@ -151,7 +151,8 @@ body {
 <div class="content">
   <div style="color: white; text-align: center;">
     <h1>Hello!</h1>
-    <h2 style="color: white;">My name is Ethan, I am a CS student who is deeply passionate about technology especially the world of software! Beyond software, I enjoy sports, music, and TV.<br>I bring a blend of technical expertise and fun to everything I do, and I am excited to learn all the time!</h2>
+    <h2 style="color: white;">My name is Ethan, I am a CS student who is deeply passionate about software! Beyond software, I enjoy sports, music, and TV.
+      <br>I bring a blend of technical expertise and fun to everything I do, and I am excited to learn all the time!</h2>
   </div>
 </div>
 
