--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,8 @@ body {
 
 .content h1 {
   animation: fadeInHello 5s forwards; 
-  font-size: 200%;
+  font-size: 190%;
+  margin-bottom: 0;
 }
 
 .content h2, .content h3 {
@@ -168,7 +169,7 @@ a {
 
 
     <h2 style="animation: fadeInHello 11s forwards;">Timetabler</h2>
-    <h3 style="animation: fadeInName 18s forwards;">Using MongoDB to send and retrieve timetabling info..
+    <h3 style="animation: fadeInName 18s forwards;">Using MongoDB to send and retrieve timetabling info.
     Source code <a href="https://github.com/ET1892/TimeTable-Creator" target="_blank" rel="noopener noreferrer">here</a></h3>
 
 
