--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@ body {
   <div style="color: white; text-align: center;">
     <h1>Hello!</h1>
     <h2 style="color: white;">My name is Ethan, I am a CS student who is deeply passionate about software! Beyond software, I enjoy sports, music, and TV.
-      <br>I bring a blend of technical expertise and fun to everything I do, and I am excited to learn all the time!</h2>
+      <br>I bring a blend of technical expertise and enjoy everything I do!</h2>
   </div>
 </div>
 
